--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
-    "mongoose": "^6.6.4",
+    "method-override": "^3.0.0",
+    "mongoose": "^6.7.2",
     "nodemon": "^2.0.20"
   }
 }
