--- a/package.json
+++ b/package.json
@@ -16,9 +16,18 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "gsap": "^3.11.4",
+    "i": "^0.3.7",
+    "install": "^0.13.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.7.2",
-    "nodemon": "^2.0.20"
+    "node-sass": "^8.0.0",
+    "nodemon": "^2.0.20",
+    "npm": "^9.4.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "sass": "^1.62.1"
   }
 }
